error.txt
haris@haris-desktop:~/celestial-nav/build$ cmake --build .
[ 12%] Building CXX object CMakeFiles/celestial_nav.dir/src/main.cpp.o
/home/haris/celestial-nav/src/main.cpp: In function ‘int main(int, char**)’:
/home/haris/celestial-nav/src/main.cpp:103:46: error: ‘StarMatching::~StarMatching()’ is private within this context
  103 |         StarMatching starMatch(referenceStars);
      |                                              ^
In file included from /home/haris/celestial-nav/src/user_interface.h:5,
                 from /home/haris/celestial-nav/src/main.cpp:2:
/home/haris/celestial-nav/src/star_matching.h:37:5: note: declared private here
   37 |     ~StarMatching();
      |     ^
gmake[2]: *** [CMakeFiles/celestial_nav.dir/build.make:76: CMakeFiles/celestial_nav.dir/src/main.cpp.o] Error 1
gmake[1]: *** [CMakeFiles/Makefile2:83: CMakeFiles/celestial_nav.dir/all] Error 2
gmake: *** [Makefile:91: all] Error 2
haris@haris-desktop:~/celestial-nav/build$ 